--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.10"
 django = "^5.1.3"
 psycopg2-binary = "^2.9.10"
 python-dotenv = "^1.0.1"
+djangorestframework-simplejwt = "^5.3.1"
+djangorestframework = "^3.15.2"
+pillow = "^11.0.0"
 
 
 [build-system]
