--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 djangorestframework-simplejwt = "^5.3.1"
 djangorestframework = "^3.15.2"
 pillow = "^11.0.0"
+django-stubs = "^5.1.1"
 
 
 [build-system]
