--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework-simplejwt = "^5.3.1"
 djangorestframework = "^3.15.2"
 pillow = "^11.0.0"
 django-stubs = "^5.1.1"
+ipython = "^8.29.0"
 
 
 [build-system]
