--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ djangorestframework = "^3.15.2"
 pillow = "^11.0.0"
 django-stubs = "^5.1.1"
 ipython = "^8.29.0"
+django-filter = "^24.3"
 
 
 [build-system]
