--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ django-stubs = "^5.1.1"
 ipython = "^8.29.0"
 django-filter = "^24.3"
 coverage = "^7.6.7"
+celery = "^5.4.0"
+redis = "^5.2.0"
+django-celery-beat = "^2.7.0"
 
 
 [build-system]
