--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ celery = "^5.4.0"
 redis = "^5.2.0"
 django-celery-beat = "^2.7.0"
 requests = "^2.32.3"
+drf-spectacular = "^0.27.2"
 
 
 [build-system]
