--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ redis = "^5.2.0"
 django-celery-beat = "^2.7.0"
 requests = "^2.32.3"
 drf-spectacular = "^0.27.2"
+django-cors-headers = "^4.6.0"
 
 
 [build-system]
