--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ django-celery-beat = "^2.7.0"
 requests = "^2.32.3"
 drf-spectacular = "^0.27.2"
 django-cors-headers = "^4.6.0"
+flake8 = "^7.1.1"
 
 
 [build-system]
